--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -643,4 +643,23 @@
 
     <!-- For performance and storage reasons, limit the number of fingerprints per user -->
     <integer name="config_fingerprintMaxTemplatesPerUser">3</integer>
+
+    <!-- List of packages that can use the Conversation space for their category messages
+         notifications until they target R -->
+    <string-array name="config_notificationMsgPkgsAllowedAsConvos" translatable="false">
+	<item>com.facebook.orca</item>
+	<item>com.instagram.android</item>
+	<item>com.whatsapp</item>
+	<item>com.snapchat.android</item>
+	<item>jp.naver.line.android</item>
+	<item>com.kakao.talk</item>
+	<item>com.discord</item>
+	<item>org.thoughtcrime.securesms</item>
+	<item>com.groupme.android</item>
+	<item>org.telegram.messenger</item>
+	<item>com.twitter.android</item>
+	<item>com.viber.voip</item>
+	<item>com.linkedin.android</item>
+	<item>com.tencent.mm</item>
+    </string-array>
 </resources>
